--- a/100/index.html
+++ b/100/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="1">box-shadows外英语</a></li>
+        <li><a href="1">box-shadows外阴影</a></li>
          <li><a href="2">box-shadows内阴影</a></li>
          <li><a href="3">box-shadows四阴影</a></li>
          <li><a href="4">box-shadows圆</a></li>
