--- a/100/5/index.html
+++ b/100/5/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style type="text/css">
-    .box {
-        width: 200px;
-        height: 100px;
-        background-color: pink;
-        }
+     .box{
+           width: 500px;
+           height: 200px;
+           background-color: red;
+     }
     </style>
-
 </head>
 <body>
-    <div class="box" style="box-radius: 50%/50%;"></div>
-    <!--第一个百分之50只高度的，第二个百分之50是高度一半，这是制作椭圆效果，圆形只需要一个百分之50，代表宽高的一半-->
+    <div class="box" style="border-radius: 50%/50%;"></div><!--第一个是宽的一半，第二个是高的一半这是椭圆,圆形只需要一个50%同时代表宽高的一半-->
+
 </body>
 </html>
