--- a/100/index.html
+++ b/100/index.html
@@ -12,6 +12,7 @@
          <li><a href="4">box-shadows圆</a></li>
          <li><a href="5">box-shadows圆角矩形</a></li>
          <li><a href="6">旋转</a></li>
+         <li><a href="7">移动</a></li>
 
     </ul>
 
