旋转，位移，缩小，斜切

--- a/100/7/index.html
+++ b/100/7/index.html
@@ -13,8 +13,8 @@
 
         }
     .demo:hover{
-        transform:translate(100px,100px) rotate(64deg);/*既旋转并移动位置*/
-        /*translate移动  rotate旋转*/
+        transform:translate(100px,100px) rotate(64deg) scale(2,2) skew(30deg,30deg)/*既旋转并移动位置*/
+        /*translate移动  rotate旋转 scale放大缩小属性 skew斜切 deg是单位*/
     }
 </style>
 </head>
