--- a/100/index.html
+++ b/100/index.html
@@ -3,16 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<h1>BLOGS</h1>
     <ul>
-        <li><a href="1">box-shadows外阴影</a></li>
-         <li><a href="2">box-shadows内阴影</a></li>
-         <li><a href="3">box-shadows四阴影</a></li>
-         <li><a href="4">box-shadows圆</a></li>
-         <li><a href="5">box-shadows圆角矩形</a></li>
-         <li><a href="6">旋转</a></li>
-         <li><a href="7">移动，旋转，倾斜，放大缩小</a></li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">1</div>
+            <div class="right">
+                <h2 class="titale">box-shadows外阴影</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">2</div>
+            <div class="right">
+                <h2 class="titale">box-shadows内阴影</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">3</div>
+            <div class="right">
+                <h2 class="titale">>box-shadows四阴影</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">4</div>
+            <div class="right">
+                <h2 class="titale">box-shadows圆</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">5</div>
+            <div class="right">
+                <h2 class="titale">box-shadows圆角矩形</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">6</div>
+            <div class="right">
+                <h2 class="titale">旋转</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+        <li class="first">
+        <a href="1" class="clearfix">
+            <div class="left">7</div>
+            <div class="right">
+                <h2 class="titale">移动，旋转，倾斜，放大缩小</h2>
+                <h3 class="date">2015年12月14号</h3>
+            </div>
+        </a>
+        </li>
+
 
     </ul>
 
