--- a/100/9/index.html
+++ b/100/9/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="first"></div>
 <div class="second"></div>
-<div class="three"></div>
+<div class="third"></div>
 
 </body>
 </html>
