--- a/100/邦购项目/index.html
+++ b/100/邦购项目/index.html
@@ -25,12 +25,9 @@
     <div class="banner">
         <div class="banner1_bg">
             <img src="images/banner_bg1_13.jpg" height="396" width="320">
-            <div class="wenzi1" style="color:#01273b;">
-                迎接新生活
-            </div>
+            <p class="wenzi1" style="color:#01273b;">迎接新生活</p>
             <div class="wenzi2" style="color:#01273b;">给爱美的你</div>
-            <div class="wenzi3" style="color:#01273b;">年终会男生篇
-            </div>
+            <div class="wenzi3" style="color:#01273b;">年终会男生篇</div>
             <div class="wenzi4">去看看 ！</div>
         </div>
         <div class="banner2_bg">
@@ -39,14 +36,54 @@
                 迎接新生活
             </div>
             <div class="wenzi2" style="color:#af0000;">给爱美的你</div>
-            <div class="wenzi3" style="color:#af0000;">年终会女生篇
-            </div>
+            <div class="wenzi3" style="color:#af0000;">年终会女生篇</div>
             <div class="wenzi4" style="color:#af0000">去看看 ！</div>
         </div>
+     </div>
+
+<!--banner_end-->
+
+<!--main_begin-->
+    <div class="main">
+        <div class="main1">
+            <div class="daohang"></div>
+            <div class="daohang1">鞋履馆
+            </div>
+            <div class="daohang2">独特的品牌调性!<br>多元前卫的设计元素。</div>
+            <div class="shangpin">
+            <img src="images/main1xie_03.jpg" height="162" width="204">
+            </div>
+            <div class="jiage" style="color:#b6b6b6;">男真皮休闲鞋<br><span style="color:#727272;">￥627</span></div>
         </div>
+    </div>
+
+    <div class="main2">
+            <div class="daohang"></div>
+            <div class="daohang1">皮箱馆
+            </div>
+            <div class="daohang2">精选ABS+PC打造，精工细作，为你而生！<br>加厚加粗，牢固抗压，不易变形断裂，<br>适合身高人群使用。</div>
+            <div class="shangpin">
+            <img src="images/main2pixiang_06.jpg" height="254" width="320">
+            </div>
+            <div class="tiaozhuan">
+            查看更多
+            </div>
+        </div>
+<!--main_end-->
+<!--fengexian-->
+    <div class="fengexian">
 
     </div>
-<!--banner_end-->
+<!--fengexian-->
+
+<!--footer_begin-->
+    <div class="footer">
+        <img src="images/logo_03.png" height="42" width="164">
+    </div>
+    <div class="biaoshi">
+        CopyRight © 2000-2015<br>版权所有 上海美特斯邦威服饰股份有限公司<br>banggo.com 沪ICP备0503
+    </div>
+<!--footer_end-->
 
 </body>
 </html>
