--- a/100/邦购/index.html
+++ b/100/邦购/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>banggo.com 邦购网 | 美特斯邦威官方商城-Me&City官方商城，100%正品保证!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script>
