--- a/100/邦购/index.html
+++ b/100/邦购/index.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>banggo.com 邦购网 | 美特斯邦威官方商城-Me&City官方商城，100%正品保证!</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="jq/jquery-1.7.1.js"></script>
     <script>
-        window.onload=function(){
-            var navsum=document.getElementById("navsum");
-            var clicks=document.getElementById("clicks");
-            clicks.onclick=function(){
-                if(navsum.style.display=="none"){
-                    navsum.style.display="block"
-                }else{
-                    navsum.style.display="none"
-                }
-            }
-        }
-        </script>
+    $(document).ready(function(){
+        $("#clicks").click(function(){
+            $("#navsum").toggle();
+        });
+        })
+    </script>
 </head>
 <body>
 <!--header begin-->
@@ -50,14 +45,14 @@
         <p class="c1">迎接新生活</p>
         <h1>给爱美的你</h1>
         <p class="c2">辞旧迎新男女篇</p>
-        <p class="c3"><button>去看看</button></p>
+        <p class="c3"><button style="cursor: pointer">去看看</button></p>
         </div>
     </div>
 <!--banner end-->
 <!--main begin-->
 <div class="main">
     <!--main-top begin-->
-    <div class="main-top1"><img src="images/main-top1_03.png"</div>
+    <div class="main-top1" style="cursor: pointer"><img src="images/main-top1_03.png"</div>
     <p class="main-top2">鞋履馆</p>
     <p class="main-top3">独特的品牌调性！<br>多元前卫的设计元素。</p>
     <div class="main-top3"><img src="images/main-top3_03.png"></div>
@@ -69,14 +64,14 @@
     <p class="main-top2">皮箱馆</p>
     <p class="main-top3">精选ABS+PC打造，精工细作，为你而生！<br>加厚加粗，牢固抗压，不易变形断裂。</p>
     <div class="main-top3"><img src="images/main-center3_07.png"></div>
-    <div class="main-center"><button>查看更多</button></div>
+    <div class="main-center"><button  style="cursor: pointer">查看更多</button></div>
     <!--main-center end-->
     <!--main-bottom begin-->
     <div class="main-top1"><img src="images/main-top1_03.png"></div>
     <p class="main-top2">美妆馆</p>
     <p class="main-top3">深层洁面，告别大油脸！<br>韩束喜迎新年。</p>
     <div class="main-top3"><img src="images/main-boottom_15.png"></div>
-    <div class="main-center"><button>查看更多</button></div>
+    <div class="main-center"><button  style="cursor: pointer">查看更多</button></div>
     <!--main-bottom end-->
 </div>
 <!--main end-->
