--- a/100/邦购/index.html
+++ b/100/邦购/index.html
@@ -10,6 +10,10 @@
     $(document).ready(function(){
         $("#clicks").click(function(){
             $("#navsum").toggle();
+            $(window).scroll(function(){
+                $("#navsum").hide();
+            })
+
         });
         })
     </script>
