--- a/100/邦购/index.html
+++ b/100/邦购/index.html
@@ -68,7 +68,8 @@
 </div>
 
 <!--banner end-->
-<!--main begin-->
+
+<!--main1 begin-->
 <div class="main clearfix">
     <!--main-top begin-->
     <div class="main1">
@@ -108,7 +109,7 @@
     </div>
     <!--main-bottom end-->
 </div>
-<!--main end-->
+<!--main1 end-->
 <!--footer begin-->
     <div class="footer clearfix">
         <div class="footer-logo">
